CocaColaProjectBidev_2/src/objects/ProjectManagement__c.object
<CustomObject>
    <fields>
        <fullName>AcceptCount__c</fullName>
        <description>Issue受付した総件数</description>
        <label>受付の件数</label>
        <summaryFilterItems>
            <field>Project_Issue__c.Status__c</field>
            <operation>equals</operation>
            <value>受付</value>
        </summaryFilterItems>
        <summaryForeignKey>Project_Issue__c.ProjectName__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CheckCount__c</fullName>
        <description>Issueの確認総件数</description>
        <label>確認中の件数</label>
        <summaryFilterItems>
            <field>Project_Issue__c.Status__c</field>
            <operation>equals</operation>
            <value>確認中</value>
        </summaryFilterItems>
        <summaryForeignKey>Project_Issue__c.ProjectName__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CompletedCount__c</fullName>
        <description>Issue解決済の総件数</description>
        <label>解決済の件数</label>
        <summaryFilterItems>
            <field>Project_Issue__c.Status__c</field>
            <operation>equals</operation>
            <value>解決済</value>
        </summaryFilterItems>
        <summaryForeignKey>Project_Issue__c.ProjectName__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ProgressBar__c</fullName>
        <formula>IMAGE(&quot;/img/samples/color_red.gif&quot;,  &quot;%&quot;, 15, ProgressPercent__c * 100 ) &amp; IMAGE(&quot;/s.gif&quot;, &quot;%&quot;, 15, 100 - (ProgressPercent__c * 100))&amp;TEXT( Round(ProgressPercent__c, 2)*100 ) &amp;&quot;%&quot;</formula>
        <label>進捗率バー</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgressPercent__c</fullName>
        <formula>IF(TotalCount__c == 0, 0,  CompletedCount__c  /  TotalCount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>進捗率</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TotalCount__c</fullName>
        <description>Issue総件数</description>
        <label>総件数</label>
        <summaryForeignKey>Project_Issue__c.ProjectName__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>プロジェクト管理</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>TotalCount__c</columns>
        <columns>AcceptCount__c</columns>
        <columns>CheckCount__c</columns>
        <columns>CompletedCount__c</columns>
        <columns>ProgressBar__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <label>プロジェクト管理名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>